<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/top_layut"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/_15sdp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:text="@string/app_name"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:textSize="@dimen/_25sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/app_description"
                    android:textColor="@color/black_light1"
                    android:textSize="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/genres_layout"
                app:layout_constraintTop_toBottomOf="@id/top_layut"
                android:layout_margin="@dimen/_15sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:text="@string/available_genres"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/_18sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:id="@+id/view_all_btn"
                    android:src="@drawable/arrow_down"
                    android:layout_alignParentEnd="true"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_centerVertical="true"
                    android:layout_height="@dimen/_30sdp"/>
            </RelativeLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/genres_recycler_view"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/genres_layout"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>