<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/back_btn"
                app:layout_constraintTop_toTopOf="@id/title"
                app:layout_constraintBottom_toBottomOf="@id/title"
                android:layout_marginStart="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/arrow_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/title"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="@dimen/_10sdp"
                app:layout_constraintStart_toEndOf="@id/back_btn"
                tools:text="Country"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:gravity="center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/image_layout"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:cardCornerRadius="@dimen/_30sdp"
                >
                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/splach_bg"
                    android:layout_height="match_parent"/>
            </com.google.android.material.card.MaterialCardView>

           <LinearLayout
               android:id="@+id/followers_layout"
               android:layout_width="wrap_content"
               android:orientation="vertical"
               android:layout_marginTop="@dimen/_10sdp"
               app:layout_constraintEnd_toStartOf="@id/play_count_layout"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@id/image_layout"
               android:layout_height="wrap_content">
               <TextView
                   android:text="@string/followeres"
                   android:textColor="@color/black_light1"
                   android:textSize="@dimen/_12sdp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"/>
               <TextView
                   android:id="@+id/followeres_tv"
                   android:text="3.8 M"
                   android:textStyle="bold"
                   android:textColor="@color/black"
                   android:textSize="@dimen/_14sdp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"/>
           </LinearLayout>
            <LinearLayout
                android:id="@+id/play_count_layout"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/followers_layout"
                app:layout_constraintTop_toTopOf="@id/followers_layout"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/play_count"
                    android:textColor="@color/black_light1"
                    android:textSize="@dimen/_12sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/play_count_tv"
                    android:text="1.15 B"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <TextView
                android:id="@+id/description_tv"
                app:layout_constraintTop_toBottomOf="@id/followers_layout"
                android:layout_margin="@dimen/_20sdp"
                tools:text="Country music is a broad term, covering a great many styles of music predominantly created in the United Country music is a broad term, covering a great many styles of music predominantly created in the United"
                android:textColor="@color/black"
                android:linksClickable="true"
                android:autoLink="all"
                android:textColorLink="@color/red"
                android:textSize="@dimen/_14sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RelativeLayout
                android:id="@+id/top_tracks_layout"
                app:layout_constraintTop_toBottomOf="@id/description_tv"
                android:layout_margin="@dimen/_15sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:text="@string/top_tracks"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/_14sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:id="@+id/view_all_btn_tracks"
                    android:visibility="gone"
                    android:src="@drawable/arrow_down"
                    android:layout_alignParentEnd="true"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_centerVertical="true"
                    android:layout_height="@dimen/_30sdp"/>
            </RelativeLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tracks_recycler_view"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/top_tracks_layout"
                android:layout_height="wrap_content"/>

            <RelativeLayout
                android:id="@+id/top_albums_layout"
                app:layout_constraintTop_toBottomOf="@id/tracks_recycler_view"
                android:layout_margin="@dimen/_15sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:text="@string/top_albums"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/_14sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:id="@+id/view_all_btn_albums"
                    android:visibility="gone"
                    android:src="@drawable/arrow_down"
                    android:layout_alignParentEnd="true"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_centerVertical="true"
                    android:layout_height="@dimen/_30sdp"/>
            </RelativeLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/albums_recycler_view"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/top_albums_layout"
                android:layout_height="wrap_content"/>

            <RelativeLayout
                android:id="@+id/genres_layout"
                app:layout_constraintTop_toBottomOf="@id/albums_recycler_view"
                android:layout_margin="@dimen/_15sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:text="@string/genres"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/_14sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:id="@+id/view_all_btn"
                    android:visibility="gone"
                    android:src="@drawable/arrow_down"
                    android:layout_alignParentEnd="true"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_centerVertical="true"
                    android:layout_height="@dimen/_30sdp"/>
            </RelativeLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/genres_recycler_view"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_marginBottom="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/genres_layout"
                android:layout_height="wrap_content"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>